--- a/translations/kangyur/translations/090-020_toh576,932-the_dharani_of_the_perfection_of_wisdom_in_one_hundred_thousand_lines.xml
+++ b/translations/kangyur/translations/090-020_toh576,932-the_dharani_of_the_perfection_of_wisdom_in_one_hundred_thousand_lines.xml
@@ -4,30 +4,29 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">shes rab kyi pha rol tu phyin pa stong
-                    phrag brgya pa’i gzungs</title>
-                <title type="mainTitle" xml:lang="bo">ཤེས་རབ་ཀྱི་ཕ་རོལ་ཏུ་ཕྱིན་པ་སྟོང་ཕྲག་བརྒྱ་པའི་གཟུངས།</title>
                 <title type="mainTitle" xml:lang="en">The Dhāraṇī of “The Perfection of Wisdom in
                     One Hundred Thousand Lines”</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">Śatasāhasrikā­prajñā­pāramitā­dhāraṇī</title>
-                <title type="longTitle" xml:lang="bo">འཕགས་པ་ཤེས་རབ་ཀྱི་ཕ་རོལ་ཏུ་ཕྱིན་པ་སྟོང་ཕྲག་བརྒྱ་པའི་གཟུངས།</title>
-                <title type="longTitle" xml:lang="Bo-Ltn">’phags pa shes rab kyi pha rol tu phyin pa
-                    stong phrag brgya pa’i gzungs</title>
+                <title type="mainTitle" xml:lang="bo">ཤེས་རབ་ཀྱི་ཕ་རོལ་ཏུ་ཕྱིན་པ་སྟོང་ཕྲག་བརྒྱ་པའི་གཟུངས།</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">shes rab kyi pha rol tu phyin pa stong
+                    phrag brgya pa’i gzungs</title>
                 <title type="longTitle" xml:lang="en">The Noble “Dhāraṇī of ‘The Perfection of
                     Wisdom in One Hundred Thousand Lines’ ”</title>
                 <title type="longTitle" xml:lang="Sa-Ltn">Ārya­śatasāhasrikā­prajñā­pāramitā­dhāraṇī</title>
-                <title type="otherTitle" xml:lang="zh"/>
+                <title type="longTitle" xml:lang="bo">འཕགས་པ་ཤེས་རབ་ཀྱི་ཕ་རོལ་ཏུ་ཕྱིན་པ་སྟོང་ཕྲག་བརྒྱ་པའི་གཟུངས།</title>
+                <title type="longTitle" xml:lang="Bo-Ltn">’phags pa shes rab kyi pha rol tu phyin pa
+                    stong phrag brgya pa’i gzungs</title>
                 <author role="translatorMain" xml:id="UT22084-090-020-1"><!--Buddhapīṭha Translation Group--></author>
-                <consultant role="projectManager" xml:id="UT22084-090-020-2">Péter-Dániel
-                    Szántó</consultant>
+                <consultant role="projectManager" xml:id="UT22084-090-020-2">Péter-Dániel Szántó</consultant>
                 <author role="translatorEng" xml:id="UT22084-090-020-3">Gergely Hidas</author>
                 <author role="translatorEng" xml:id="UT22084-090-020-4">Péter-Dániel Szántó</author>
                 <editor role="projectEditor" xml:id="UT22084-090-020-21">Andreas Doctor</editor>
                 <editor role="copyEditor" xml:id="UT22084-090-020-30">Laura Goetz</editor>
                 <editor role="TEImarkupEditor" xml:id="UT22084-090-020-31">Martina Cotter</editor>
+                <editor role="finalReviewer" xml:id="UT22084-090-020-99">Nathaniel Rich</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2024</date>
+                <edition>v 1.0.0 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -35,7 +34,7 @@
                     <name>84000: Translating the Words of the Buddha</name> is a global
                     non-profit initiative to translate all the Buddha’s words into modern languages,
                     and to make them available to everyone. </publisher>
-                <availability status="2">
+                <availability status="1.a">
                     <licence>
                         <graphic url="http://i.creativecommons.org/l/by-nc-nd/2.0/88x31.png"/>
                         <p>This work is provided under the protection of a Creative Commons CC
@@ -48,7 +47,7 @@
                 <idno xml:id="UT22084-090-020"/>
                 <note>An early mistake in the assigning of UT numbers within the 84000 project means
                     that these ids diverge slightly from the standard logic.</note>
-                <date>2024-10-07</date>
+                <date>2024-11-21</date>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh576" type="text">
@@ -126,6 +125,15 @@
                 <change who="#line-tofte" when="2024-10-17T08:23:05.589Z" type="text-version" status="0.0.2" xml:id="UT22084-090-020-91">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
+                <change who="#line-tofte" when="2024-11-14T09:53:41.247Z" type="text-version" status="0.0.3" xml:id="UT22084-090-020-100">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#martina-cotter" when="2024-11-21T12:37:29.878Z" type="translation-status" status="1.a" xml:id="UT22084-090-020-101">
+                    <desc>1.a</desc>
+                </change>
+                <change who="#martina-cotter" when="2024-11-21T12:37:29.878Z" type="text-version" status="1.0.0" xml:id="UT22084-090-020-102">
+                    <desc>First published version.</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
     </teiHeader>
@@ -167,10 +175,10 @@
                             </title>.<ref rend="pending" inst="activate link when these chapters are published" target="http://read.84000.co/translation/toh496.html"/>
                         </note> and the benefits of its recitation. </p>
                     <milestone unit="chunk" xml:id="UT22084-090-020-39"/>
-                    <p tid="10">Such short texts served a variety of purposes, the primary being
+                    <p tid="10">Such short texts served a variety of purposes, the primary one being
                         that by reciting them one could acquire the positive karmic benefits of
                         reciting an entire, sometimes extremely long, text. On a practical level,
-                        the recitation of these short texts also served as equivalent to the
+                        the recitation of these short texts also served as an equivalent to the
                         recitation of the parent text, should a prescribed ritual so require.</p>
                     <milestone unit="chunk" xml:id="UT22084-090-020-40"/>
                     <p tid="11">The text lacks both a Sanskrit title and a translator’s colophon. In
@@ -204,7 +212,7 @@
                             verso–33 recto. </note> and the *<title xml:lang="Sa-Ltn">Bodhipaddhati</title> by Abhayākaragupta.<note place="end" xml:id="UT22084-090-020-44">
                             <title xml:lang="Bo-Ltn">byang chub kyi gzhung lam</title> (Toh 3766).
                                 See folio 120.b for the dhāraṇī.<ref rend="pending" inst="add milestone to f.120.b" target="http://read.84000.co/translation/toh3766.html"/> This
-                            text heavily depends on Mañjukīrti. </note>
+                                text depends heavily on Mañjukīrti. </note>
                     </p>
                     <milestone unit="chunk" xml:id="UT22084-090-020-45"/>
                     <p tid="12">This translation was made principally on the basis of the Tibetan
@@ -252,7 +260,7 @@
                                 Tatakaragupta. The Tibetan reads <foreign xml:lang="Bo-Ltn" type="quote">sarvakāryaparipramaṇadharme</foreign>.</note>
                         śamatānu­parivartita­dharme<note place="end" xml:id="UT22084-090-020-55"> This is Mañjukīrti’s version;
                             Tatakaragupta has <foreign xml:lang="Sa-Ltn" type="quote">samatānu­parivartita­dharma</foreign>. The Tibetan reads <foreign xml:lang="Bo-Ltn" type="quote">samantānu­parivartani­dharme</foreign> (in the Tantra version) or
-                            <foreign xml:lang="Bo-Ltn" type="quote">samantānu­parivartana­dharme</foreign> (in the Compendium
+                            <foreign xml:lang="Bo-Ltn" type="quote">samantānu­parivartana­dharme</foreign> (in the Compendium of Dhāraṇīs
                                 version). Abhayākaragupta’s text transmits yet another reading:
                             <foreign xml:lang="Sa-Ltn" type="quote">samatāpari­vartita­dharme</foreign>. </note> svāhā!</mantra>
                         <note place="end" xml:id="UT22084-090-020-56"> Up to here, a very similar
@@ -280,7 +288,7 @@
                             exception of Tatakaragupta, which itself is not a perfect match, as it
                             reads <foreign xml:lang="Sa-Ltn" type="quote">oṃ prajñā­vardhani
                                 svāhā</foreign>. A tentative translation of the dhāraṇī is as
-                            follows: <mantra xml:lang="mixed">“Namely, <foreign xml:lang="Sa-Ltn">Oṁ</foreign> O One with the Dharma (or
+                            follows: <mantra xml:lang="mixed">“It is thus, <foreign xml:lang="Sa-Ltn">Oṁ</foreign> O One with the Dharma (or
                             “with the Characteristic”) of the Sages, O One with the Dharma of
                             Friendly Disposition, O One with the Dharma of Favor, O One with the
                             Dharma of Liberation, O One with the Dharma of Constant Favor, O One
@@ -304,12 +312,12 @@
                             the Sanskrit idiom for “to learn by heart.” He also spells out the
                             benefit as the “meritorious karmic fruit” (<foreign xml:lang="Sa-Ltn" type="quote">puṇyaphala</foreign>) of memorizing the parent text.
                             This sentence is then followed by a fascinating short discussion, which
-                            merits to be quoted in full: “Surely, this is an exaggeration! No, one
+                            merits quoting in full: “Surely, this is an exaggeration! No, one
                             should not say this. For countless thus-gone ones have empowered this
                             dhāraṇī to serve as a method for gaining the equipment of merit for
                             women, immature people, and simpletons, as well as for learned people
                             whose minds are confused, just like the pole of a snake charmer[, which
-                            is preprepared by the expert snake charmer to be effective even when he
+                            is prepared by the expert snake charmer to be effective even when he
                             is no longer present,] for removing poison; however, it is not a method
                             for gaining the knowledge conveyed by <title xml:lang="en">The</title>
                                 [<title xml:lang="en">Perfection of Wisdom in</title>] <title xml:lang="en">One Hundred Thousand Lines</title>. This should be
@@ -365,7 +373,7 @@
                         (’bum, ka–a), folios 1.b (ka)–395.a (a). English translation (partial)
                             <title xml:lang="en">The Perfection of Wisdom in One Hundred Thousand
                             Lines</title> 2024.</bibl>
-                    <bibl xml:id="UT22084-090-020-71">Abhayākaragupta. <title xml:lang="Bo-Ltn">byang chub kyi gzhung lam</title> (*<title xml:lang="Sa-Ltn">Bodhipaddhati</title>). Toh 3766, Degé Tengyur vol. 79 (rgyud, tshu),
+                    <bibl xml:id="UT22084-090-020-71">Abhayākara­gupta. <title xml:lang="Bo-Ltn">byang chub kyi gzhung lam</title> (*<title xml:lang="Sa-Ltn">Bodhi­paddhati</title>). Toh 3766, Degé Tengyur vol. 79 (rgyud, tshu),
                         folios 119.b–127.a.<ref rend="pending" target="http://read.84000.co/translation/toh3766.html"/>
                     </bibl>
                 </div>
