--- a/translations/kangyur/translations/090-021_toh577,933-the_dharani_of_the_perfection_of_wisdom_in_one_twenty_five_thousand_lines.xml
+++ b/translations/kangyur/translations/090-021_toh577,933-the_dharani_of_the_perfection_of_wisdom_in_one_twenty_five_thousand_lines.xml
@@ -4,30 +4,28 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">shes rab kyi pha rol tu phyin pa stong
-                    phrag nyi shu lnga pa’i gzungs</title>
-                <title type="mainTitle" xml:lang="bo">ཤེས་རབ་ཀྱི་ཕ་རོལ་ཏུ་ཕྱིན་པ་སྟོང་ཕྲག་ཉི་ཤུ་ལྔ་པའི་གཟུངས།</title>
                 <title type="mainTitle" xml:lang="en">The Dhāraṇī of “The Perfection of Wisdom in
                     Twenty-Five Thousand Lines”</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">Pañca­viṃśatisāhasrikā­prajñā­pāramitā­dhāraṇī</title>
-                <title type="longTitle" xml:lang="bo">འཕགས་པ་ཤེས་རབ་ཀྱི་ཕ་རོལ་ཏུ་ཕྱིན་པ་སྟོང་ཉི་ཤུ་ལྔ་པའི་གཟུངས།</title>
-                <title type="longTitle" xml:lang="Bo-Ltn">’phags pa shes rab kyi pha rol tu phyin pa
-                    stong phrag nyi shu lnga pa’i gzungs</title>
+                <title type="mainTitle" xml:lang="bo">ཤེས་རབ་ཀྱི་ཕ་རོལ་ཏུ་ཕྱིན་པ་སྟོང་ཕྲག་ཉི་ཤུ་ལྔ་པའི་གཟུངས།</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">shes rab kyi pha rol tu phyin pa stong
+                    phrag nyi shu lnga pa’i gzungs</title>
                 <title type="longTitle" xml:lang="en">The Noble “Dhāraṇī of ‘The Perfection of
                     Wisdom in Twenty-Five Thousand Lines’ ”</title>
                 <title type="longTitle" xml:lang="Sa-Ltn">Ārya­pañca­viṃśatisāhasrikā­prajñā­pāramitā­dhāraṇī</title>
-                <title type="otherTitle" xml:lang="zh"/>
+                <title type="longTitle" xml:lang="bo">འཕགས་པ་ཤེས་རབ་ཀྱི་ཕ་རོལ་ཏུ་ཕྱིན་པ་སྟོང་ཕྲག་ཉི་ཤུ་ལྔ་པའི་གཟུངས།</title>
+                <title type="longTitle" xml:lang="Bo-Ltn">’phags pa shes rab kyi pha rol tu phyin pa stong phrag nyi shu lnga pa’i gzungs</title>
                 <author role="translatorMain" xml:id="UT22084-090-021-1"><!--Buddhapīṭha Translation Group--></author>
-                <consultant role="projectManager" xml:id="UT22084-090-021-2">Péter-Dániel
-                    Szántó</consultant>
+                <consultant role="projectManager" xml:id="UT22084-090-021-2">Péter-Dániel Szántó</consultant>
                 <author role="translatorEng" xml:id="UT22084-090-021-3">Gergely Hidas</author>
                 <author role="translatorEng" xml:id="UT22084-090-021-4">Péter-Dániel Szántó</author>
                 <editor role="projectEditor" xml:id="UT22084-090-021-21">Andreas Doctor</editor>
                 <editor role="copyEditor" xml:id="UT22084-090-021-30">Laura Goetz</editor>
                 <editor role="TEImarkupEditor" xml:id="UT22084-090-021-31">Martina Cotter</editor>
+                <editor role="finalReviewer" xml:id="UT22084-090-021-89">Nathaniel Rich</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2024</date>
+                <edition>v 1.0.0 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -35,7 +33,7 @@
                     <name>84000: Translating the Words of the Buddha</name> is a global
                     non-profit initiative to translate all the Buddha’s words into modern languages,
                     and to make them available to everyone. </publisher>
-                <availability status="2">
+                <availability status="1.a">
                     <licence>
                         <graphic url="http://i.creativecommons.org/l/by-nc-nd/2.0/88x31.png"/>
                         <p>This work is provided under the protection of a Creative Commons CC
@@ -48,7 +46,7 @@
                 <idno xml:id="UT22084-090-021"/>
                 <note>An early mistake in the assigning of UT numbers within the 84000 project means
                     that these ids diverge slightly from the standard logic.</note>
-                <date>2024-10-10</date>
+                <date>2024-11-21</date>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh577" type="text">
@@ -126,6 +124,15 @@
                 <change who="#line-tofte" when="2024-10-17T08:24:14.943Z" type="text-version" status="0.0.2" xml:id="UT22084-090-021-81">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
+                <change who="#line-tofte" when="2024-11-14T09:55:18.188Z" type="text-version" status="0.0.3" xml:id="UT22084-090-021-90">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#martina-cotter" when="2024-11-21T12:38:52.698Z" type="translation-status" status="1.a" xml:id="UT22084-090-021-91">
+                    <desc>1.a</desc>
+                </change>
+                <change who="#martina-cotter" when="2024-11-21T12:38:52.698Z" type="text-version" status="1.0.0" xml:id="UT22084-090-021-92">
+                    <desc>First published version.</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
     </teiHeader>
@@ -165,10 +172,10 @@
                             </title>.</note>
                         and the benefits of its recitation. </p>
                     <milestone unit="chunk" xml:id="UT22084-090-021-39"/>
-                    <p tid="10">Such short texts served a variety of purposes, the primary being
+                    <p tid="10">Such short texts served a variety of purposes, the primary one being
                         that by reciting them one could acquire the positive karmic benefits of
                         reciting an entire, sometimes extremely long, text. On a practical level,
-                        the recitation of these short texts also served as equivalent to the
+                        the recitation of these short texts also served as an equivalent to the
                         recitation of the parent text, should a prescribed ritual so require.</p>
                     <milestone unit="chunk" xml:id="UT22084-090-021-40"/>
                     <p tid="11">We could not find this text transmitted in Sanskrit. A very similar
@@ -211,7 +218,7 @@
                     <lb/>
                     <milestone unit="chunk" xml:id="UT22084-090-021-47"/>
                     <p rend="mantra" tid="20">
-                        <mantra xml:lang="Sa-Ltn">tadyathā— oṃ prajñe
+                        <mantra xml:lang="Sa-Ltn">tadyathā—oṃ prajñe
                                 mahāprajñe<note place="end" xml:id="UT22084-090-021-48"> We adopted
                                 the reading of the <title xml:lang="en">Kauśika</title> here, as the
                                 Tibetan <foreign xml:lang="Bo-Ltn" type="quote">prajñāprajñe</foreign> did not seem satisfactory. </note>
@@ -239,7 +246,7 @@
                         dhara vara vara garja garja āgaccha āgaccha bhagavati mā <ref cRef="F.281.a" type="folio" key="toh933" xml:id="UT22084-090-021-78"/> vilamba
                             svāhā!</mantra>
                         <note place="end" xml:id="UT22084-090-021-56"> A
-                                tentative translation of the dhāraṇī is as follows: “<mantra xml:lang="mixed">Namely, <foreign xml:lang="Sa-Ltn">Oṁ</foreign> O
+                                tentative translation of the dhāraṇī is as follows: “<mantra xml:lang="mixed">It is thus—<foreign xml:lang="Sa-Ltn">Oṁ</foreign> O
                             Wisdom, O Great Wisdom, O One with the Splendor of Wisdom, O One Seen
                             with Wisdom (or, according to the <title xml:lang="en">Kauśika</title>
                             version, “O One Who Produces the Light of Wisdom”), O One Who Destroys
@@ -258,18 +265,18 @@
                             here as “to uphold” in order to capture the ambiguity of the original,
                             Tatakaragupta, when discussing a similar dhāraṇī said to encapsulate
                                 <title xml:lang="en">The Perfection of Wisdom in One Hundred
-                                Thousand Lines</title> (see <title xml:lang="en">The Dhāraṇī of “The
-                                    Perfection of Wisdom in One Hundred Thousand Lines,”</title> Toh 576/932),<ref rend="pending" target="http://read.84000.co/translation/toh576.html"/> is more explicit when he replaces the
+                                    Thousand Lines</title> (see <title xml:lang="en">
+                                <ref target="http://read.84000.co/translation/toh576.html">The Dhāraṇī of “The Perfection of Wisdom in One Hundred Thousand Lines</ref>
+                            </title>,” Toh 576/932), is more explicit when he replaces the
                             verb with <foreign xml:lang="Sa-Ltn" type="quote">kaṇṭhasthīkṛ</foreign>
                             (“to place it in one’s throat”), which is the Sanskrit idiom for “to
                             learn by heart.” He also spells out the benefit as the “meritorious
                             karmic fruit” (<foreign xml:lang="Sa-Ltn" type="term">puṇyaphala</foreign>) of memorizing the parent text. This sentence
-                            is then followed by a fascinating short discussion, which merits to be
-                            quoted in full: “Surely, this is an exaggeration! No, one should not say
+                            is then followed by a fascinating short discussion, which merits quoting in full: “Surely, this is an exaggeration! No, one should not say
                             this. For countless thus-gone ones have empowered this dhāraṇī to serve
                             as a method for gaining the equipment of merit for women, immature
                             people, and simpletons, as well as for learned people whose minds are
-                            confused, just like the pole of a snake-charmer[, which is preprepared
+                            confused, just like the pole of a snake-charmer[, which is prepared
                             by the expert snake charmer to be effective even when he is no longer
                             present,] for removing poison; however, it is not a method for gaining
                             the knowledge conveyed by <title xml:lang="en">The</title> [<title xml:lang="en">Perfection of Wisdom in</title>] <title xml:lang="en">One Hundred Thousand Lines</title>. This should be understood to
@@ -315,9 +322,8 @@
                         tu phyin pa stong phrag brgya pa’i gzungs</title> (<title xml:lang="Sa-Ltn">Śatasāhasrikā­prajñā­pāramitā­dhāraṇī</title>).
                         Toh 576, Degé Kangyur vol. 90 (rgyud, pha), folios 202.b–203.a; Toh
                         932, Degé Kangyur vol. 100 (gzungs, e), folio 280.b. English translation
-                        <title xml:lang="en">
-                            <ref rend="pending" target="http://read.84000.co/translation/toh576.html"/>The Dhāraṇī of “The Perfection of Wisdom in One
-                            Hundred Thousand Lines”</title>.</bibl>
+                        <title xml:lang="en">The Dhāraṇī of “The Perfection of Wisdom in One
+                            Hundred Thousand Lines”</title> 2024.</bibl>
                     <bibl xml:id="UT22084-090-021-64">
                         <title xml:lang="Bo-Ltn">shes rab kyi pha rol
                         tu phyin pa stong phrag nyi shu lnga pa</title> (<title xml:lang="Sa-Ltn">Pañca­viṃśatisāhasrikā­prajñā­pāramitā</title>). Toh 9,
@@ -334,8 +340,7 @@
                         </title> (<title xml:lang="Sa-Ltn">Śatasāhasrikā­prajñā­pāramitā­dhāraṇī</title>, <title xml:lang="Bo-Ltn">shes rab kyi pha rol tu phyin pa stong phrag brgya pa’i gzungs</title>,
                         Toh 576, 932). Translated by the Buddhapīṭha Translation Group (Gergely
                         Hidas and Péter-Dániel Szántó). Online publication. 84000: Translating the
-                        Words of the Buddha.<ref rend="pending" target="http://read.84000.co/translation/toh576.html"/>
-                    </bibl>
+                        Words of the Buddha, 2024.</bibl>
                     <bibl xml:id="UT22084-090-021-66">———. <title xml:lang="en">
                             <ref target="https://84000.co/translation/toh9.html">The Perfection of
                         Wisdom in Twenty-Five Thousand Lines</ref>
