--- a/translations/kangyur/translations/090-022_toh578,934-the_dharani_of_the_perfection_of_wisdom_in_one_eight_thousand_lines.xml
+++ b/translations/kangyur/translations/090-022_toh578,934-the_dharani_of_the_perfection_of_wisdom_in_one_eight_thousand_lines.xml
@@ -4,30 +4,29 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">shes rab kyi pha rol tu phyin pa brgyad
-                    stong pa’i gzungs</title>
-                <title type="mainTitle" xml:lang="bo">ཤེས་རབ་ཀྱི་ཕ་རོལ་ཏུ་ཕྱིན་པ་བརྒྱད་སྟོང་པའི་གཟུངས།</title>
                 <title type="mainTitle" xml:lang="en">The Dhāraṇī of “The Perfection of Wisdom in
                     Eight Thousand Lines”</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">Aṣṭasāhasrikā­prajñā­pāramitā­dhāraṇī</title>
-                <title type="longTitle" xml:lang="bo">འཕགས་པ་ཤེས་རབ་ཀྱི་ཕ་རོལ་ཏུ་ཕྱིན་པ་བརྒྱད་སྟོང་པའི་གཟུངས།</title>
-                <title type="longTitle" xml:lang="Bo-Ltn">’phags pa shes rab kyi pha rol tu phyin pa
-                    brgyad stong pa’i gzungs</title>
+                <title type="mainTitle" xml:lang="bo">ཤེས་རབ་ཀྱི་ཕ་རོལ་ཏུ་ཕྱིན་པ་བརྒྱད་སྟོང་པའི་གཟུངས།</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">shes rab kyi pha rol tu phyin pa brgyad
+                    stong pa’i gzungs</title>
                 <title type="longTitle" xml:lang="en">The Noble “Dhāraṇī of ‘The Perfection of
                     Wisdom in Eight Thousand Lines’ ”</title>
                 <title type="longTitle" xml:lang="Sa-Ltn">Āryāṣṭasāhasrikā­prajñā­pāramitā­dhāraṇī</title>
-                <title type="otherTitle" xml:lang="zh"/>
+                <title type="longTitle" xml:lang="bo">འཕགས་པ་ཤེས་རབ་ཀྱི་ཕ་རོལ་ཏུ་ཕྱིན་པ་བརྒྱད་སྟོང་པའི་གཟུངས།</title>
+                <title type="longTitle" xml:lang="Bo-Ltn">’phags pa shes rab kyi pha rol tu phyin pa
+                    brgyad stong pa’i gzungs</title>
                 <author role="translatorMain" xml:id="UT22084-090-022-1"><!--Buddhapīṭha Translation Group--></author>
-                <consultant role="projectManager" xml:id="UT22084-090-022-2">Péter-Dániel
-                    Szántó</consultant>
+                <consultant role="projectManager" xml:id="UT22084-090-022-2">Péter-Dániel Szántó</consultant>
                 <author role="translatorEng" xml:id="UT22084-090-022-3">Gergely Hidas</author>
                 <author role="translatorEng" xml:id="UT22084-090-022-4">Péter-Dániel Szántó</author>
                 <editor role="projectEditor" xml:id="UT22084-090-022-21">Andreas Doctor</editor>
                 <editor role="copyEditor" xml:id="UT22084-090-022-30">Laura Goetz</editor>
                 <editor role="TEImarkupEditor" xml:id="UT22084-090-022-31">Martina Cotter</editor>
+                <editor role="finalReviewer" xml:id="UT22084-090-022-76">Nathaniel Rich</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2024</date>
+                <edition>v 1.0.0 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -35,7 +34,7 @@
                     <name>84000: Translating the Words of the Buddha</name> is a global
                     non-profit initiative to translate all the Buddha’s words into modern languages,
                     and to make them available to everyone. </publisher>
-                <availability status="2">
+                <availability status="1.a">
                     <licence>
                         <graphic url="http://i.creativecommons.org/l/by-nc-nd/2.0/88x31.png"/>
                         <p>This work is provided under the protection of a Creative Commons CC
@@ -48,7 +47,7 @@
                 <idno xml:id="UT22084-090-022"/>
                 <note>An early mistake in the assigning of UT numbers within the 84000 project means
                     that these ids diverge slightly from the standard logic.</note>
-                <date>2024-10-11</date>
+                <date>2024-11-21</date>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh578" type="text">
@@ -126,6 +125,15 @@
                 <change who="#line-tofte" when="2024-10-17T08:25:14.739Z" type="text-version" status="0.0.2" xml:id="UT22084-090-022-68">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
+                <change who="#line-tofte" when="2024-11-14T09:56:47.733Z" type="text-version" status="0.0.3" xml:id="UT22084-090-022-77">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#martina-cotter" when="2024-11-21T12:40:39.307Z" type="translation-status" status="1.a" xml:id="UT22084-090-022-78">
+                    <desc>1.a</desc>
+                </change>
+                <change who="#martina-cotter" when="2024-11-21T12:40:39.307Z" type="text-version" status="1.0.0" xml:id="UT22084-090-022-79">
+                    <desc>First published version.</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
     </teiHeader>
@@ -138,7 +146,7 @@
                 <head type="summary" tid="1">Summary</head>
                 <milestone unit="chunk" xml:id="UT22084-090-022-33"/>
                 <p tid="2">This text consists of a short dhāraṇī said to encompass one of the most
-                    prestigious sūtras in the Kangyur, <title xml:lang="en">The Perfection of Wisdom
+                    esteemed sūtras in the Kangyur, <title xml:lang="en">The Perfection of Wisdom
                         in Eight Thousand Lines</title> (Toh 12), and the benefits of its
                     recitation.</p>
             </div>
@@ -158,7 +166,7 @@
                 <div type="section" xml:id="UT22084-090-022-introduction-1">
                     <milestone unit="chunk" xml:id="UT22084-090-022-37"/>
                     <p tid="9">This text consists of a short dhāraṇī said to encompass one of the most
-                        prestigious sūtras in the Kangyur, <title xml:lang="en">The Perfection of
+                        esteemed sūtras in the Kangyur, <title xml:lang="en">The Perfection of
                             Wisdom in Eight Thousand Lines</title>,<note place="end" xml:id="UT22084-090-022-38">
                                 <title xml:lang="Sa-Ltn">Aṣṭasāhasrikā­prajñā­pāramitā</title> (<title xml:lang="Bo-Ltn">sher phyin brgyad stong pa</title>, Toh
                                 12).<ref rend="pending" target="http://read.84000.co/translation/toh12.html"/>
@@ -166,10 +174,10 @@
                         The parent text is widely accepted as the most important presentation of the
                         Perfection of Wisdom. </p>
                     <milestone unit="chunk" xml:id="UT22084-090-022-39"/>
-                    <p tid="10">Such short texts served a variety of purposes, the primary being that by
+                    <p tid="10">Such short texts served a variety of purposes, the primary one being that by
                         reciting them one could acquire the positive karmic benefits of reciting an
                         entire, sometimes extremely long, text. On a practical level, the recitation
-                        of these short texts also served as equivalent to the recitation of the
+                        of these short texts also served as an equivalent to the recitation of the
                         parent text, should a prescribed ritual so require.</p>
                     <milestone unit="chunk" xml:id="UT22084-090-022-40"/>
                     <p tid="11">The text lacks both a Sanskrit title and a translator’s colophon, and we
@@ -205,11 +213,11 @@
                     <lb/>
                     <milestone unit="chunk" xml:id="UT22084-090-022-46"/>
                     <p rend="mantra" tid="20">
-                        <mantra xml:lang="Sa-Ltn">tadyathā— oṃ hrīḥ śruti­smṛti­vijaye
+                        <mantra xml:lang="Sa-Ltn">tadyathā—oṃ hrīḥ śruti­smṛti­vijaye
                         svāhā! prajñā­pāramitāyai sarva­durgati śodhaya rājāya
                             svāhā!</mantra>
                         <note place="end" xml:id="UT22084-090-022-47"> A tentative translation of the dhāraṇī
-                            is as follows: <mantra xml:lang="mixed">“Namely, <foreign xml:lang="Sa-Ltn">oṁ hrīḥ</foreign> O One Victorious
+                            is as follows: <mantra xml:lang="mixed">“It is thus—<foreign xml:lang="Sa-Ltn">oṁ hrīḥ</foreign> O One Victorious
                             in/by Study and Recollection <foreign xml:lang="Sa-Ltn">svāhā</foreign>. <foreign xml:lang="Sa-Ltn">Svāhā</foreign> to
                             the Perfection of Wisdom and to the King Who Eliminates All Bad
                             Destinies.”</mantra> We find the reading <foreign xml:lang="Sa-Ltn" type="quote">rājāya</foreign> puzzling. </note>
@@ -275,9 +283,8 @@
                         brgya pa’i gzungs</title> (<title xml:lang="Sa-Ltn">Śatasāhasrikā­prajñā­pāramitā­dhāraṇī</title>).
                         Toh 576, Degé Kangyur vol. 90 (rgyud, pha), folios 202.b–203.a; Toh
                         932, Degé Kangyur vol. 100 (gzungs, e), folio 280.b. English translation
-                        <title xml:lang="en">
-                            <ref rend="pending" target="http://read.84000.co/translation/toh576.html"/>The Dhāraṇī of “The Perfection of Wisdom in One
-                            Hundred Thousand Lines”</title>.</bibl>
+                        <title xml:lang="en">The Dhāraṇī of “The Perfection of Wisdom in One
+                            Hundred Thousand Lines”</title> 2024.</bibl>
                     <bibl xml:id="UT22084-090-022-54">
                         <title xml:lang="Bo-Ltn">shes rab kyi pha rol tu phyin pa brgyad stong
                         pa</title> (<title xml:lang="Sa-Ltn">Aṣṭasāhasrikā­prajñā­pāramitā</title>) [<title xml:lang="en">The Perfection
@@ -294,7 +301,7 @@
                         </title> (<title xml:lang="Sa-Ltn">Śatasāhasrikā­prajñā­pāramitā­dhāraṇī</title>, <title xml:lang="Bo-Ltn">shes rab kyi pha rol tu phyin pa stong phrag brgya pa’i gzungs</title>,
                         Toh 576, 932). Translated by the Buddhapīṭha Translation Group (Gergely
                         Hidas and Péter-Dániel Szántó). Online publication. 84000: Translating the
-                        Words of the Buddha.</bibl>
+                        Words of the Buddha, 2024.</bibl>
                 </div>
             </div>
             <div type="glossary" status="excluded" xml:id="UT22084-090-022-glossary">
